Fix spacing

--- a/css/main.css
+++ b/css/main.css
@@ -12,8 +12,8 @@ h2 {
   font-family: "Open Sans", sans-serif;
   font-size: 4rem;
   background-color: rgba(0, 0, 0, 0.5);
-  color: #fff
-  position:absolute;
+  color: #fff;
+  position: absolute;
   bottom: 0;
 }
 
